@@ -1,3 +1,10 @@
+** v3.04, 09.08.2017**
+* Set the font in the install step messages.
+* Change the S&L Datatext (Friend, Guild) to use text instead of the icon.
+* Fix Pet castbar position.
+* Change the castbar to be default, not transparent.
+* Fix a error with version check if the SplashScreen is disabled.
+
 ** v3.03, 07.08.2017**
 * Add some checks to tooltips. :IsForbidden()
 * Update a lot of skins.
