@@ -15,15 +15,12 @@ local CreateFrame = CreateFrame
 
 local ChangeLogData = {
 	"Changes:",
-		"• Add some checks to tooltips.",
-		"• Update a lot of skins.",
-		"• Remove the ExtraActionButton Texture.",
-		"• Adds an Player Model to the tooltip. Disabled by default.",
-		"• Update Changelog to show after the splashScreen.",
-		"• Add UnitFrame option for AuraSpacing and AuraIconText.", 
-		"• Fix a lua error with Auctineer.",
-		"• Fix a lua error if the ElvUI Actionbars are not enabled.",
-		"• Add a new Layout v2 (Still some things to do).",
+		"• Set the font in the install step messages.",
+		"• Change the S&L Datatext (Friend, Guild) to use text instead of the icon.",
+		"• Fix Pet castbar position.",
+		"• Change the castbar to be default, not transparent.",
+		"• Fix a error with version check if the SplashScreen is disabled.",
+		-- "• ",
 	" ",
 	"Notes:",
 		"• If you use Layout v2, XIV_Databar is deprecated.",
